@@ -30,18 +30,21 @@
 void ccm_log (const char *format, ...);
 void ccm_log_window (CCMWindow* window, const char *format, ...);
 void ccm_log_atom (CCMDisplay* display, Atom atom, const char *format, ...);
+void ccm_log_region (CCMDrawable* drawable, const char *format, ...);
 
 #ifdef CCM_DEBUG_ENABLE
 
 #define ccm_debug(...) ccm_log(__VA_ARGS__)
 #define ccm_debug_window(window, format...) ccm_log_window(window, format)
 #define ccm_debug_atom(display, atom, format...) ccm_log_atom(display, atom, format)
+#define ccm_debug_region(drawable, format...) ccm_log_region(drawable, format)
 
 #else
 
 #define ccm_debug(...)
 #define ccm_debug_window(window, format...)
 #define ccm_debug_atom(display, atom, format...)
+#define ccm_debug_region(drawable, format...)
 
 #endif
 
