@@ -1,3 +1,13 @@
+2008-04-17  Nicolas Bruguier  <gandalfn@club-internet.fr>
+
+    * src/async-getprop.c:
+    * src/ccm-debug.c:
+    * src/ccm-debug.h:
+    * src/ccm-drawable.c:
+    * src/ccm-screen.c:
+    * src/ccm-window.c:
+    * src/ccm-window.h: Fix few redraw issues.
+
 2008-04-16  Nicolas Bruguier  <gandalfn@club-internet.fr>
 
     * src/ccm-screen.c:
